# engine

./: Cargo.toml
examples/basic/: main.rs
res/: basic_fragment.glsl  basic_vertex.glsl  fragment.glsl  vertex.glsl
src/: TODO  color.rs  lib.rs  main.rs  num.rs
src/color/: Cargo.toml
src/color/src/: lib.rs
src/geom/: Cargo.toml  aabb.rs  mesh.rs  mod.rs  octree.rs  transform.rs  triangle.rs  util.rs  utils.rs
src/geom/formats/: mod.rs  wavefront.rs
src/geom/mesh/: anim.rs  mod.rs  stat.rs
src/geom/src/: aabb.rs  lib.rs  octree.rs  transform.rs  triangle.rs  util.rs
src/geom/src/formats/: mod.rs  tds.rs  wavefront.rs
src/geom/src/mesh/: anim.rs
src/gfx/: Cargo.toml  input.rs  mod.rs  util.rs
src/gfx/gl/: '  canvas.rs  device.rs  mesh.rs  mod.rs  shader.rs  state.rs  util.rs  vertex.rs  viewport.rs
src/gfx/gl/backends/: '  glfw.rs  mod.rs
src/gfx/src/: lib.rs
src/gfx/src/gl/: canvas.rs  device.rs  mesh.rs  mod.rs  shader.rs  state.rs  util.rs  vertex.rs  viewport.rs
src/gfx/src/gl/backends/: glfw.rs  mod.rs
src/math/: Cargo.toml  matrix.rs  matrix3.rs  matrix4.rs  matrix4x4.rs  mod.rs  quaternion.rs  util.rs  vector.rs  vector2.rs  vector3.rs
src/math/src/: lib.rs  matrix.rs  matrix3.rs  matrix4.rs  quaternion.rs  vector.rs  vector2.rs  vector3.rs
src/net/: Cargo.toml
src/net/src/: lib.rs  network.rs  stream.rs  traits.rs
src/net/src/p2p/: mod.rs  network.rs
src/num/: Cargo.toml
src/num/src/: lib.rs
src/util/: Cargo.toml  mod.rs  timer.rs
src/util/src/: lib.rs
