[package]

name = "engine"
version = "0.0.1"
authors = ["Dylan McKay <dylanmckay34@gmail.com"]

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"

[dependencies.gl]
git = "https://github.com/bjz/gl-rs"

[dependencies.num]
path = "src/num"

[dependencies.math]
path = "src/math"

[dependencies.geom]
path = "src/geom"

[dependencies.util]
path = "src/util"

[dependencies]
libc = "*"

